--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -46,8 +46,11 @@
   display: flex;
   flex-direction: column;
   line-height: 1.5;
-  font-size: 40px;
+  font-size: 2em;
   text-align: center;
+  @media screen and (min-width: 900px) {
+    font-size: 3em;
+  }
 }
 
 .li {
